<resources>
    <string name="app_name">Uana</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="foto_do_produto">Foto do Produto</string>
    <string name="descreva_o_produto">Descreva o Produto</string>
    <string name="estoque">Estoque</string>
    <string name="nome_do_produto">Nome do Produto</string>
    <string name="downloadimage">downloadimage</string>
    <string name="cadastro_de_produto">Cadastro de Produto</string>
    <string name="insira_o_link_da_imagem_do_produto">Insira o link da imagem do produto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="atualizar">Atualizar</string>
    <string name="deletar">Deletar</string>
    <string name="preco">Preço</string>
    <string name="_00_00">00,00</string>
    <string name="unid">unid</string>
    <string name="valor">R$</string>
    <string name="link_da_imagem_do_produto">link da imagem do produto</string>
    <string name="nome">Nome:</string>
    <string name="categoria">Categoria:</string>
    <string name="categoria2">Categoria:</string>
    <string name="estoquetext">Estoque:</string>
    <string name="link">Link:</string>
    <string name="_0">0</string>
    <string name="categoria3">Categoria:</string>
    <string name="qty">Qty:</string>
    <string name="zero">0</string>
    <string name="comprar_agora">Comprar Agora</string>
    <string name="adicionar_ao_carrinho">Adicionar ao Carrinho</string>
    <string name="descricao_do_produto">Descrição do Produto</string>
    <string name="real">R$</string>
    <string name="botao_add">botão add</string>
    <string name="botao_remove">botão remove</string>
    <string name="Required" />
    <string name="nome_completo">Nome Completo</string>
    <string name="e_mail">E-mail</string>
    <string name="cpf">CPF</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="cadastro_de_usuario">Cadastro de Usuário</string>
    <string name="telefone_ddd_num">Telefone (DDD + num)</string>
    <string name="voltar">Voltar</string>
    <string name="proximo">Próximo</string>
    <string name="passo_1_de_2">Passo 1 de 2</string>
    <string name="senha">Senha</string>
    <string name="bairro">Bairro</string>
    <string name="complemento">Complemento</string>
    <string name="numero">Número</string>
    <string name="endereco">Endereço</string>
    <string name="data_de_nasc">Data de Nasc</string>
    <string name="categorias">Categorias</string>
    <string name="cabelo">Cabelo</string>
    <string name="corpo">Corpo</string>
    <string name="kids">Kids</string>
    <string name="rosto">Rosto</string>
    <string name="higiene_bucal">Higiene Bucal</string>
    <string name="acess_rios">Acessórios</string>
    <string name="kits">Kits</string>
    <string name="outros">Outros</string>
    <string name="todos_os_produtos">Todos os Produtos</string>
    <string name="novo_por_aqui_criar_conta_uan">Novo por aqui? Criar conta Uaná</string>
    <string name="lembrar_meu_acesso">Lembrar meu acesso</string>
    <string name="entre_com_acesso_rapido">Entre com acesso rápido:</string>
    <string name="seus_dados_ser_o_respeitados_de_acordo_com_nossa_pol_tica_de_privacidade_nada_ser_acessado_sem_sua_autorizacao">Seus dados serão respeitados de acordo com nossa política de privacidade. Nada será acessado sem sua autorização.</string>
    <string name="digite_a_sua_senha">Digite a sua senha</string>
    <string name="retangulo">retangulo</string>
    <string name="fundo">fundo</string>
    <string name="insira_seu_cpf_ou_e_mail">insira seu CPF ou e-mail</string>
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="entrar">Entrar</string>
    <string name="ol">Olá,</string>
    <string name="acesse_sua_conta">Acesse sua conta</string>
    <string name="home">Home</string>
    <string name="categorias1">Categorias</string>
    <string name="menu">Menu</string>
    <string name="carrinho_de_compra">Carrinho de Compra</string>
    <string name="homem_com_cofrinho">homem com cofrinho</string>
    <string name="sobre_nos">Sobre Nós</string>
    <string name="minha_conta_uana">Minha Conta Uana</string>
    <string name="fazer_logout">Fazer Logout</string>
    <string name="adicionar_um_produto">Adicionar um produto</string>
    <string name="atualizar_um_produto">Atualizar um produto</string>
    <string name="suporte_ao_cliente">Suporte ao Cliente</string>
    <string name="menu2">Menu</string>
    <string name="meu_carrinho">Meu Carrinho</string>
    <string name="person">person</string>
    <string name="att">att</string>
    <string name="support">support</string>
    <string name="add">add</string>
    <string name="cart">cart</string>
    <string name="us">us</string>
    <string name="digite_seu_e_mail_cadastrado">Digite seu e-mail cadastrado</string>
</resources>