<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoriaFragment">


    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/menu2"
        android:textColor="@color/terraacora_medium"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/cardAddProduto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardMinhaConta"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toStartOf="@+id/cardAddProduto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sand"
            android:backgroundTint="@color/sand">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/person"
                android:src="@drawable/ic_baseline_person_24"
                app:layout_constraintBottom_toTopOf="@+id/textMinhaConta"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textMinhaConta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/minha_conta_uana"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardAddProduto"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginStart="5dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardMinhaConta"
        app:layout_constraintEnd_toStartOf="@+id/cardAtualizarProduto"
        app:layout_constraintStart_toEndOf="@+id/cardMinhaConta"
        app:layout_constraintTop_toTopOf="@+id/cardMinhaConta">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sand"
            android:backgroundTint="@color/sand">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/add"
                android:src="@drawable/ic_baseline_add_circle_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textAddProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/adicionar_um_produto"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/imageView9"
                app:layout_constraintStart_toStartOf="@+id/imageView9"
                app:layout_constraintTop_toBottomOf="@+id/imageView9" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardAtualizarProduto"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardAddProduto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardAddProduto"
        app:layout_constraintTop_toTopOf="@+id/cardAddProduto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sand"
            android:backgroundTint="@color/sand">

            <TextView
                android:id="@+id/textAttProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/atualizar_um_produto"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/imageView10"
                app:layout_constraintStart_toStartOf="@+id/imageView10"
                app:layout_constraintTop_toBottomOf="@+id/imageView10" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/att"
                android:src="@drawable/ic_baseline_refresh_24"
                app:layout_constraintBottom_toTopOf="@+id/textAttProduto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSuporte"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="@+id/cardMinhaConta"
        app:layout_constraintStart_toStartOf="@+id/cardMinhaConta"
        app:layout_constraintTop_toBottomOf="@+id/cardMinhaConta">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sand"
            android:backgroundTint="@color/sand">

            <TextView
                android:id="@+id/textSuporte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/suporte_ao_cliente"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/imageView11"
                app:layout_constraintStart_toStartOf="@+id/imageView11"
                app:layout_constraintTop_toBottomOf="@+id/imageView11" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/support"
                android:src="@drawable/ic_baseline_support_agent_24"
                app:layout_constraintBottom_toTopOf="@+id/textSuporte"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:padding="10dp"
        android:text="@string/fazer_logout"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardSuporte"
        tools:ignore="TextContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardCarrinho"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginStart="5dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardSuporte"
        app:layout_constraintEnd_toEndOf="@+id/cardAddProduto"
        app:layout_constraintStart_toEndOf="@+id/cardSuporte"
        app:layout_constraintTop_toTopOf="@+id/cardSuporte">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sand"
            android:backgroundTint="@color/sand">

            <TextView
                android:id="@+id/textCarrinho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/meu_carrinho"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/imageView12"
                app:layout_constraintStart_toStartOf="@+id/imageView12"
                app:layout_constraintTop_toBottomOf="@+id/imageView12" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/cart"
                android:src="@drawable/ic_baseline_shopping_cart_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSobreNos"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardCarrinho"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardCarrinho"
        app:layout_constraintTop_toTopOf="@+id/cardCarrinho">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sand"
            android:backgroundTint="@color/sand">

            <TextView
                android:id="@+id/textSobreNos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/sobre_nos"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/imageView13"
                tools:layout_editor_absoluteX="10dp" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/us"
                android:src="@drawable/ic_baseline_diversity_3_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>